add character method

--- a/notes/7-oop.Rmd
+++ b/notes/7-oop.Rmd
@@ -167,4 +167,26 @@ bizarro <- function(x) {
 ```
 
 
+```{r}
+bizarro <- function(x){
+  UseMethod("bizarro")
+}
+```
 
+```{r}
+bizarro(1:3)
+```
+
+```{r}
+bizarro.character <- function(x){
+  str_reverse(x)
+}
+bizarro(c("abc", "def"))
+```
+
+## Your Turn
+
+Write a:
+* numeric method, multiplies by -1
+* a logical method, negates
+* a data.frame method, should bizarro the column names, as well as each column.
